--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.16",
     "@types/otp-generator": "^4.0.2",
     "@types/randomstring": "^1.3.0",
     "@types/validator": "^13.12.2",
