--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "randomstring": "^1.3.0",
+    "socket.io": "^4.8.0",
     "twilio": "^5.3.3",
     "url": "^0.11.4",
     "validator": "^13.12.0"
